# visai

./: .env.dev.sample  .gitignore  Dockerfile  PostgreSQL.session.sql  README.md  detect_img.py  docker-compose.dev.yml  docker-compose.yml  my_postgres_connection.session.sql  pyproject.toml  test.py
airflow-redis-postgres/: docker-compose.yml
airflow-redis-postgres/src/: Dockerfile
airflow-redis-postgres/src/dags/: export_data.py  hello_redis.py  save_data.py  update_bbox.py
airflow-redis-postgres/src/spark/applications/: save_image.py
airflow-redis-postgres/src/spark/assets/data/: bounding_boxes_count.txt  cameras_images_data.csv  cameras_images_data2.csv
airflow-spark-minio-postgres-master/src/dags/: save_image_pipeline.py
airflow-spark-minio-postgres-master/src/spark/applications/: save_image.py
pipek/: default_settings.py
pipek/clients/: __init__.py
pipek/clients/checkmk/: __init__.py  base.py  events.py  host_groups.py  hosts.py  services.py
pipek/clients/influxdb/: __init__.py  hosts.py
pipek/controller/: server.py
pipek/dashapp/: __init__.py
pipek/dashapp/pages/: clock.py
pipek/models/: __init__.py
pipek/utils/: config.py
pipek/web/: __init__.py  acl.py
pipek/web/views/: rq_test.py  sites.py
pipek/worker/: server.py
scripts/: run-controller  run-web  run-worker
visai/: default_settings.py
visai/cmd/: controller.py  web.py  worker.py
visai/controller/: server.py
visai/dashapp/callbacks/: file_upload.py
visai/dashapp/pages/: chart_dashboard.py  image_dashboard.py
visai/jobs/: face_detections.py  people_detections.py
visai/models/: images.py
visai/utils/: config.py
visai/web/: __init__.py
visai/web/static/: package-lock.json  package.json
visai/web/views/: rq_test.py
visai/worker/: __init__.py  server.py
