[tool.poetry]
name = "visai"
version = "0.1.0"
description = ""
authors = ["Thanathip Limna <tl@coe.psu.ac.th>"]

[tool.poetry.dependencies]
python="^3.12"
dash = {extras = ["diskcache"], version = "^2.14.0"}
dash-bootstrap-components = "^1.4.2"
rq = "^1.15.1"
flask-wtf = "^1.1.1"
flask-login = "^0.6.2"
httpx = "^0.24.1"
python-dotenv = "^1.0.0"
flask-caching = "^2.1.0"
diskcache = "^5.6.3"
celery = "^5.3.4"
dash-leaflet = "^1.0.11"
pydantic-settings = "^2.2.1"
nest-asyncio = "^1.6.0"
pandas = "^2.2.3"
authlib = "^1.3.0"
markdown = "^3.6"
xlrd = "^2.0.1"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
opencv-python = "^4.10.0.84"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
fvcore = "^0.1.5.post20221221"
cloudpickle = "^3.0.0"
omegaconf = "^2.3.0"
pycocotools = "^2.0.8"
matplotlib = "^3.9.2"
yacs = "^0.1.8"
termcolor = "^2.4.0"
cityscapesscripts = "^2.2.4"
tabulate = "^0.9.0"
tqdm = "^4.66.5"
scipy = "^1.14.1"
lvis = "^0.5.3"
psutil = "^6.0.0"
onnx = "^1.17.0"
isort = "^5.13.2"
av = "^13.1.0"
iopath = "^0.1.10"
submitit = "^1.5.2"
packaging = "^24.1"
timm = "^1.0.9"
fairscale = "^0.4.13"
pytorch-lightning = "^2.4.0"
setuptools = "^75.1.0"
wheel = "^0.44.0"


[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
visai-dash = "visai.cmd.web:main"
visai-worker = "visai.cmd.worker:main"
visai-controller = "visai.cmd.controller:main"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
